--- a/DemoProject/Code/CMakeLists.txt
+++ b/DemoProject/Code/CMakeLists.txt
@@ -1,11 +1,27 @@
 
+# Query the gem name from the gem.json file if possible
+# otherwise fallback to using RenderJoyDemoProject
+o3de_find_ancestor_gem_root(gem_path gem_name "${CMAKE_CURRENT_SOURCE_DIR}")
+if (NOT gem_name)
+    set(gem_name "RenderJoyDemoProject")
+endif()
+
+# Fallback to using the current source CMakeLists.txt directory as the gem root path
+if (NOT gem_path)
+    set(gem_path ${CMAKE_CURRENT_SOURCE_DIR})
+endif()
+
+set(gem_json ${gem_path}/gem.json)
+
+o3de_restricted_path(${gem_json} gem_restricted_path gem_parent_relative_path)
+
 # Currently we are in the RenderJoyDemoProject/Code folder: ${CMAKE_CURRENT_LIST_DIR}
 # Get the platform specific folder ${pal_dir} for the current folder: ${CMAKE_CURRENT_LIST_DIR}/Platform/${PAL_PLATFORM_NAME}
-# Note: ly_get_list_relative_pal_filename will take care of the details for us, as this may be a restricted platform
+# Note: o3de_pal_dir will take care of the details for us, as this may be a restricted platform
 #       in which case it will see if that platform is present here or in the restricted folder.
-#       i.e. It could here : RenderJoyDemoProject/Code/Platform/<platorm_name>  or
+#       i.e. It could here : RenderJoyDemoProject/Code/Platform/<platform_name>  or
 #            <restricted_folder>/<platform_name>/RenderJoyDemoProject/Code
-ly_get_list_relative_pal_filename(pal_dir ${CMAKE_CURRENT_LIST_DIR}/Platform/${PAL_PLATFORM_NAME} ${o3de_project_restricted_path} ${o3de_project_path} ${o3de_project_name})
+o3de_pal_dir(pal_dir ${CMAKE_CURRENT_SOURCE_DIR}/Platform/${PAL_PLATFORM_NAME} "${gem_restricted_path}" "${gem_path}" "${gem_parent_relative_path}")
 
 # Now that we have the platform abstraction layer (PAL) folder for this folder, thats where we will find the
 # traits for this platform. Traits for a platform are defines for things like whether or not something in this project
@@ -18,11 +34,14 @@ if(NOT PAL_TRAIT_RENDERJOYDEMOPROJECT_SUPPORTED)
     return()
 endif()
 
-# We are on a supported platform, so add the RenderJoyDemoProject target
+# We are on a supported platform, so add the ${gem_name} target
 # Note: We include the common files and the platform specific files which are set in renderjoydemoproject_files.cmake and
 # in ${pal_dir}/renderjoydemoproject_${PAL_PLATFORM_NAME_LOWERCASE}_files.cmake
+
+# The ${gem_name}.Private.Object target is an internal target
+# It should not be used outside of this CMakeLists.txt
 ly_add_target(
-    NAME RenderJoyDemoProject.Static STATIC
+    NAME ${gem_name}.Private.Object STATIC
     NAMESPACE Gem
     FILES_CMAKE
         renderjoydemoproject_files.cmake
@@ -37,7 +56,7 @@ ly_add_target(
 )
 
 ly_add_target(
-    NAME RenderJoyDemoProject ${PAL_TRAIT_MONOLITHIC_DRIVEN_MODULE_TYPE}
+    NAME ${gem_name} ${PAL_TRAIT_MONOLITHIC_DRIVEN_MODULE_TYPE}
     NAMESPACE Gem
     FILES_CMAKE
         renderjoydemoproject_shared_files.cmake
@@ -47,27 +66,25 @@ ly_add_target(
             Include
     BUILD_DEPENDENCIES
         PRIVATE
-            Gem::RenderJoyDemoProject.Static
+            Gem::${gem_name}.Private.Object
             AZ::AzCore
 )
 
-# if enabled, RenderJoyDemoProject is used by all kinds of applications
-ly_create_alias(NAME RenderJoyDemoProject.Builders NAMESPACE Gem TARGETS Gem::RenderJoyDemoProject)
-ly_create_alias(NAME RenderJoyDemoProject.Tools    NAMESPACE Gem TARGETS Gem::RenderJoyDemoProject)
-ly_create_alias(NAME RenderJoyDemoProject.Clients  NAMESPACE Gem TARGETS Gem::RenderJoyDemoProject)
-ly_create_alias(NAME RenderJoyDemoProject.Servers  NAMESPACE Gem TARGETS Gem::RenderJoyDemoProject)
+# if enabled, ${gem_name} is used by all kinds of applications
+ly_create_alias(NAME ${gem_name}.Builders NAMESPACE Gem TARGETS Gem::${gem_name})
+ly_create_alias(NAME ${gem_name}.Tools    NAMESPACE Gem TARGETS Gem::${gem_name})
 
 ################################################################################
 # Gem dependencies
 ################################################################################
 
-# Enable the specified list of gems from GEM_FILE or GEMS list for this specific project:
-ly_enable_gems(PROJECT_NAME RenderJoyDemoProject GEM_FILE enabled_gems.cmake)
+# Query the project name from the nearest project.json file in a directory at or above
+# the current one.
+# This gem is the project gem and therefore should be part of the project that is using it
+o3de_find_ancestor_project_root(project_path project_name "${CMAKE_CURRENT_SOURCE_DIR}")
 
-
-if(PAL_TRAIT_BUILD_SERVER_SUPPORTED)
-    # this property causes it to actually make a ServerLauncher.
-    # if you don't want a Server application, you can remove this and the
-    # following ly_enable_gems lines.
-    set_property(GLOBAL APPEND PROPERTY LY_LAUNCHER_SERVER_PROJECTS RenderJoyDemoProject)
+# If the project name could not be queried from a project.json file, then fallback
+# to using the name of the project provided when the project template was instantiated
+if (NOT project_name)
+    set(project_name RenderJoyDemoProject)
 endif()
