Saving the work
Signed-off-by: lumbermixalot <lumbermixalot@github>

--- a/DemoProject/project.json
+++ b/DemoProject/project.json
@@ -33,7 +33,8 @@
         "StartingPointInput",
         "TextureAtlas",
         "QtForPython",
-        "RenderJoy"
+        "RenderJoy",
+        "RenderBoy"
     ],
     "engine_version": "2.0.0"
 }
