--- a/DemoProject/project.json
+++ b/DemoProject/project.json
@@ -33,8 +33,7 @@
         "StartingPointInput",
         "TextureAtlas",
         "QtForPython",
-        "RenderJoy",
-        "RenderBoy"
+        "RenderJoy"
     ],
     "engine_version": "2.0.0"
 }
